--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "range-map",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/ashleymarkfletcher/range-map.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "range",
+    "map",
+    "scale",
+    "processing"
+  ],
+  "author": "Ashley Fletcher <ashleymarkfletcher@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashleymarkfletcher/range-map/issues"
