--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/ashleymarkfletcher/range-map/issues"
   },
-  "homepage": "https://github.com/ashleymarkfletcher/range-map#readme"
+  "homepage": "https://github.com/ashleymarkfletcher/range-map#readme",
+  "devDependencies": {
+    "jest": "^21.2.1"
+  }
 }
