--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest && codecov"
   },
   "jest": {
     "collectCoverage": true,
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/ashleymarkfletcher/range-map#readme",
   "devDependencies": {
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "codecov": "^3.0.0"
   }
 }
