Add types. Bump version.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "range-map",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "jest && codecov"
   },
